welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:2: error: ')' expected but 'return' found.
	if ((a==2 || b==2 || c==2) return 10
                                   ^redTicket:4: error: ';' expected but ')' found.
	else while (a!=b && a!=c) return 1)
                                          ^